# quote-server

./: Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE.txt  README.md  add_quote.sh  delete_quote.sh  docker-compose.yaml  index.html  quote_table.sql  quotes.db  run.sh
.sqlx/: query-449fcb761563dba39fddaf01dd4039ef86a6e60e3e973e8f0f29d0c17ff3b610.json  query-90d18b13ed9bed48315e20d7cdd9cc53ca32be87dcbd2850bf9b2ac01afa1f5b.json
assests/templates/: index.html
assets/static/: quote.css  quotes.json
assets/templates/: index.html
back-end/: .env  auth-post.sh  login.sh
back-end/assets/templates/: index.html
back-end/db/: quotes.db
back-end/migrations/: 0001_create.down.sql
back-end/secrets/: jwt_secret.txt
back-end/src/: api.rs  authjwt.rs  error.rs  main.rs  quote.rs  templates.rs  web.rs
db/: quotes.db
examples/: joke.rs
examples/db/: conn.rs
front-end/: run.sh
front-end/src/: main.rs  quote.rs
migrations/: 0001_create.up.sql  0002_full_joke.up.sql  0002_full_quote.down.sql  qt_up.sql  quotes_up.sql
migrations/01_create_quotes/: down.sql  up.sql
migrations/02_add_tags/: up.sql
quote-client-leptos/: Cargo.toml
src/: api.rs  main.rs  quote.rs  templates.rs  web.rs
static/: famous_quotes.json  quote.css
templates/: index.html
