[package]
name = "quote-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
askama = "0.12"
tower-http = { version = "0.6", features = ["fs"] }
rand = "0.9.1"
postgres = "0.19.10"

[dependencies.sqlx]
version = "0.8.5"
features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono", "json"]
